--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="MingZhe Zhang">
     <meta name="descpription" content="This is the homepage for the OzMusic Website">
-    <link rel="resetcss" href="reset.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>OzMusic</title>
 </head>
@@ -28,12 +28,16 @@
 
     <main class="mainbody">
         <div class="sidebar">
-            <div><a href="Home.html">Home</a></div>
-            <div><a href="Productpage.html">Categories</a></div>
-            <div><a href="Productpage.html">Favourites</a></div>
-            <div><a href="Productpage.html">Sales</a></div>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Productpage.html">Categories</a></li>
+                <li><a href="Productpage.html">Favourites</a></li>
+                <li><a href="Productpage.html">Sales</a></li>
+            </ul>
         </div>
-        <div class="sidecart"><a href="Productpage.html">Cart</a></div>
+        <div class="sidecart">
+            <a href="Productpage.html">Cart</a>
+        </div>
         <span class="maincontent">
             <img src="yee" alt="">
         </span>
