--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
             <span>
                 <a href="Home.html" class="icon">OzMusic</a>
             </span>
+            <span><input type="text" placeholder="Search"></span>
             <span>
                 <a href="home.html" class="navbtn">Login</a>
             </span>
@@ -35,6 +36,7 @@
                 <li><a href="Productpage.html">Sales</a></li>
             </ul>
         </div>
+        <img src="/images/图像 20.png" alt="">
         <div class="sidecart">
             <a href="Productpage.html">Cart</a>
         </div>
