--- a/home.html
+++ b/home.html
@@ -27,27 +27,36 @@
         </nav>
     </header>
 
-    <main class="mainbody">
-        <div class="sidebar">
-            <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="Productpage.html">Categories</a></li>
-                <li><a href="Productpage.html">Favourites</a></li>
-                <li><a href="Productpage.html">Sales</a></li>
-            </ul>
-        </div>
-        <img src="/images/图像 20.png" alt="">
+     <div class="sidebar">
+        <ul>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Productpage.html">Categories</a></li>
+            <li><a href="Productpage.html">Favourites</a></li>
+            <li><a href="Productpage.html">Sales</a></li>
+        </ul>
         <div class="sidecart">
             <a href="Productpage.html">Cart</a>
         </div>
-        <span class="maincontent">
-            <img src="yee" alt="">
-        </span>
+        <div class="cartitems">
+            <div class="item">
+                <p class="itemname">Never gonna give you up</p>
+            </div>
+        </div>
+        <div>
+            <a href="">Check Out</a>
+        </div>
+    </div>
+
+    <span class="promotion">
+        <img src="/images/图像 20.png" alt="">
+    </span>
+
         <!--This is a comment--> 
-    </main>
 
     <footer class="footer">
         twitter
     </footer>
+
 </body>
+
 </html>
