--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <div>
             <a href="">Check Out</a>
         </div>
+        <!-- The elements above are universal for all of the webpages in this assignment, with the exception of: Login, Register and confirmation -->
+        <!-- Questions
+            000000000
+            .
+        
     </div>
 
     <span class="promotion">
