--- a/oldindex.html
+++ b/oldindex.html
@@ -7,7 +7,7 @@
     <meta name="author" content="MingZhe Zhang">
     <meta name="descpription" content="This is the homepage for the OzMusic Website">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="oldstyle.css">
     <title>OzMusic</title>
 </head>
 
