--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
 
     <main>
-        <div class="banner"><img src="/images/图像 20.png" alt=""></div>
+        <div class="banner"><img src="images/banner.png" alt=""></div>
         <div class="products">
             <table class="tablelist">
                 <th>Product</th>
