--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <span class="icon">
-            <a href="login.html">OzMusic</a>
+            <a href="index.html">OzMusic</a>
         </span>
         <span>
             <input type="text" placeholder="Search">
