update home page
home page

--- a/index.html
+++ b/index.html
@@ -19,14 +19,34 @@
         <a class="headbtn" href="register">Register</a>
     </header>
 
-    <main>
+    <main class="maincontent">
         <div class="sidebar">
             <div class="navigation">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="categories">categories</a></li>
-                    <li><a href="favourites">Favourites</a></li>
-                    <li><a href="sales">Sales</a></li>
+                    <li>
+                        <span class="navioptions">
+                            <img class="sideicon" src="images/home.png" alt="">
+                            <a href="index.html">Home</a>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="navioptions">
+                            <img class="sideicon" src="images/categories.png" alt="">
+                            <a href="index.html">Categories</a>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="navioptions">
+                            <img class="sideicon" src="images/favourite.png" alt="">
+                            <a href="index.html">Favourites</a>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="navioptions">
+                            <img class="sideicon" src="images/sales.png" alt="">
+                            <a href="index.html">Sales</a>
+                        </span>
+                    </li>
                 </ul>
             </div>
             <div class="sidecart">
@@ -34,24 +54,65 @@
             </div>
             <div class="sidecartlist">
                 <div class="item1">
-                    Album1
+                    <div class="item1name">
+                        AMY WINEHOUSE FRANK
+                    </div>
+                    <span class="quantityctrl">
+                        <span class="-"><img src="images/minus.png" alt=""></span>
+                        <span class="quantity">x1</span>
+                        <span class="+"><img src="images/plus.png" alt=""></span>
+                        <span class="price">$15</span>
+                    </span>
+
                 </div>
-                <div class="item2">
-                    Album2
+
+                <div class="item1">
+
+                    <div class="item1name">
+                        MUDDY WATERS HOWLIN WOLF BUDDY GUY
+                    </div>
+
+                    <span class="quantityctrl">
+                        <span class="-"><img src="images/minus.png" alt=""></span>
+                        <span class="quantity">x1</span>
+                        <span class="+"><img src="images/plus.png" alt=""></span>
+                        <span class="price">$25</span>
+                    </span>
+
+
+                </div>
+
+                <div class="checkoutbtn">
+                    <span>Check Out</span>
                 </div>
             </div>
         </div>
 
         <div class="content">
+            <div class="viewhistory">
+                <span>Recently viewed</span>
+            </div>
             <div class="banner">
                 <img src="images/banner.png" alt="">
+            </div>
+            <div class="new arrival">
+                <span>
+                    <span></span>
+                </span>
             </div>
         </div>
     </main>
 
     <footer>
         <div class="footer">
-            <p>You can find us on:</p>
+            <span></span>
+            <span class="socialmedia">
+                Find us on:
+                <img src="images/图像 15.png" alt="">
+            </span>
+            <span class="socialmedia">
+                <img src="/images/图像 17.png" alt="">
+            </span>
         </div>
     </footer>
 </body>
