--- a/index.html
+++ b/index.html
@@ -104,15 +104,17 @@
     </main>
 
     <footer>
-        <div class="footer">
-            <span></span>
-            <span class="socialmedia">
-                Find us on:
-                <img src="images/图像 15.png" alt="">
-            </span>
-            <span class="socialmedia">
+        <span class="footertext">
+            Find us on:
+        </span>
+        <span class="socialmedia">
+            <img src="images/图像 15.png" alt="">
+        </span>
+        <span class="socialmedia">
                 <img src="/images/图像 17.png" alt="">
-            </span>
+        </span>
+        <div class="copyright">
+            Copyright © 2022 All rights reserved OZmusic Online
         </div>
     </footer>
 </body>
