Arrangement of files
moving html and css files into respective folders

--- a/html/Productpage.html
+++ b/html/Productpage.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="MingZhe Zhang">
     <meta name="descpription" content="This is the homepage for the OzMusic Website">
-    <link rel="resetcss" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="resetcss" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>OzMusic</title>
 </head>
 
