--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,52 @@
     </header>
 
     <main class="cart_page_content">
-        <div></div>
+        <div><button onclick="history.back()" class="back_button"><img src="images/Back.png" alt=""></button></div>
+        <table class="content-table">
+            <thead>
+              <tr>
+                <th>Product</th>
+                <th></th>
+                <th>Quantity</th>
+                <th>Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="cart_product">
+                    <img src="images/amy.png" alt="">
+                    <div class="product_info">
+                        <div>AMY WINEHOUSE  FRANK</div>
+                        <div class="product_cost">$15</div>
+                    </div>
+                </td>
+                <td>
+                    
+                </td>
+                <td>88,110</td>
+                <td>dcode</td>
+              </tr>
+              <tr>
+                <td class="cart_product">
+                    <img src="images/glad.png" alt="">
+                    <div class="product_info">
+                        <div>GLADYS KNIGHT & THE PIPS</div>
+                        <div class="product_cost">$30</div>
+                    </div>
+                </td>
+                <td>
+                </td>
+                <td>
+                    <div>
+
+                    </div>
+                </td>
+                <td>dcode</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="progress"></div>
     </main>
 
 
