--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li>
                         <span class="navioptions">
-                            <img class="sideicon" src="images/home.png" alt="">
+                            <img onclick="toHome()" class="sideicon" src="images/home.png" alt="">
                             <a href="index.html">Home</a>
                         </span>
                     </li>
@@ -201,5 +201,6 @@
         </div>
     </footer>
 </body>
+<script src="main.js"></script>
 
 </html>
