--- a/cart.html
+++ b/cart.html
@@ -24,68 +24,77 @@
         <div><button onclick="history.back()" class="back_button"><img src="images/Back.png" alt=""></button></div>
         <table class="content-table">
             <thead>
-              <tr>
-                <th class="header_product">Product</th>
-                <th class="header_quantity">Quantity</th>
-                <th class="header_total">Total</th>
-                <th></th>
-              </tr>
+                <tr>
+                    <th class="header_product">Product</th>
+                    <th class="header_quantity">Quantity</th>
+                    <th class="header_total">Total</th>
+                    <th></th>
+                </tr>
             </thead>
+
             <tbody>
-              <tr>
-                <td class="cart_product">
-                    <img src="images/amy.png" alt="">
-                    <div class="product_info">
-                        <div>AMY WINEHOUSE  FRANK</div>
-                        <div class="product_cost">$15</div>
-                    </div>
-                </td>
-                <td>
-                    <div class="product_quantity">
-                        <div><img src="images/minus.png" alt=""></div>
-                        <div>1</div>
-                        <div><img src="images/plus.png" alt=""></div>
-                    </div>
-                </td>
-                <td class="product_total">$15</td>
-                <td class="product_cancel">
-                    <button class="cancel">
-                        <img src="images/cancel.png" alt="">
-                    </button>
-                </td>
-              </tr>
+                <tr>
+                    <td class="cart_product">
+                        <img src="images/amy.png" alt="">
+                        <div class="product_info">
+                            <div>AMY WINEHOUSE  FRANK</div>
+                            <div class="product_cost">$15</div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="product_quantity">
+                            <div><img src="images/minus.png" alt=""></div>
+                            <div>1</div>
+                            <div><img src="images/plus.png" alt=""></div>
+                        </div>
+                    </td>
+                    <td class="product_total">$15</td>
+                    <td class="product_cancel">
+                        <button class="cancel">
+                            <img src="images/cancel.png" alt="">
+                        </button>
+                    </td>
+                </tr>
 
-              <tr>
-                <td class="cart_product">
-                    <img src="images/glad.png" alt="">
-                    <div class="product_info">
-                        <div>GLADYS KNIGHT & THE PIPS</div>
-                        <div class="product_cost">$30</div>
-                    </div>
-                </td>
+                <tr>
+                    <td class="cart_product">
+                        <img src="images/glad.png" alt="">
+                        <div class="product_info">
+                            <div>GLADYS KNIGHT & THE PIPS</div>
+                            <div class="product_cost">$30</div>
+                        </div>
+                    </td>
 
-                <td>
-                    <div class="product_quantity">
-                        <div><img src="images/minus.png" alt=""></div>
-                        <div>1</div>
-                        <div><img src="images/plus.png" alt=""></div>
-                    </div>
-                </td>
-                <td class="product_total">$30</td>
+                    <td>
+                        <div class="product_quantity">
+                            <div><img src="images/minus.png" alt=""></div>
+                            <div>1</div>
+                            <div><img src="images/plus.png" alt=""></div>
+                        </div>
+                    </td>
+                    <td class="product_total">$30</td>
 
-                <td class="product_cancel">
-                    <button class="cancel">
-                        <img src="images/cancel.png" alt="">
-                    </button>
-                </td>
-              </tr>
-
+                    <td class="product_cancel">
+                        <button class="cancel">
+                            <img src="images/cancel.png" alt="">
+                        </button>
+                    </td>
+                </tr>
             </tbody>
-          </table>
+        </table>
 
-          <div class="progress">
-              <div class="checkout_status"><img src="images/status.png" alt=""></div>
-          </div>
+        <div class="progress">
+            <div class="checkout_status"><img src="images/status.png" alt=""></div>
+            <div class="item_number"> Total Items: 2</div>
+
+            <div class="cart_confirm">
+                <div class="total_cost">Total: $45</div>
+                <div>
+                    <button class="checkoutbtn">Check Out</button>
+                </div>
+            </div>
+        </div>
+
     </main>
 
 </body>
