--- a/productlist.html
+++ b/productlist.html
@@ -33,7 +33,7 @@
                     <li>
                         <span class="navioptions">
                             <img class="sideicon" src="images/categories.png" alt="">
-                            <a href="productlist.html">Categories</a>
+                            <a href="index.html">Categories</a>
                         </span>
                     </li>
                     <li>
@@ -96,9 +96,6 @@
                 <div class="hist"><div>Rock</div> </div>
             </div>
 
-            <div class="banner">
-                <img src="images/banner.png" alt="">
-            </div>
             <div class="newitems">
                 <div class="sectionheader">
                     <p>New Arrival</p>
