--- a/index.html
+++ b/index.html
@@ -79,13 +79,9 @@
                         <span class="+"><img src="images/plus.png" alt=""></span>
                         <span class="price">$25</span>
                     </span>
-
-
                 </div>
 
-                <div class="checkoutbtn">
-                    <span>Check Out</span>
-                </div>
+                <button class="checkoutbtn">Check Out</button>
             </div>
         </div>
 
@@ -106,9 +102,9 @@
                 <div class="divider"></div>
                 <div class="newproducts">
                     <div class="newproduct1">
-                        <img src="images/hiphop.png" alt="">
+                        <img src="images/amy.png" alt="">
                         <div class="productinfo">
-                            <div class="pname">ORIGINAL HIP HOP CLASSICS SERIES</div>
+                            <div class="pname">AMY WINEHOUSE FRANK</div>
                             <div class="pcost">$15</div>
                         </div>
                     </div>
