--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <ul>
                     <li>
                         <span class="navioptions">
-                            <img  class="sideicon" src="images/home.png" alt="">
+                            <img  class="sideicon" onclick="toHome()" src="images/home.png" alt="">
                             <a href="index.html">Home</a>
                         </span>
                     </li>
                     <li>
                         <span class="navioptions">
-                            <img class="sideicon" src="images/categories.png" alt="">
+                            <img class="sideicon" onclick="toProductlist()" src="images/categories.png" alt="">
                             <a href="productlist.html">Categories</a>
                         </span>
                     </li>
@@ -81,7 +81,7 @@
                     </span>
                 </div>
 
-                <button class="checkoutbtn">Check Out</button>
+                <button onclick="toCart()" class="checkoutbtn">Check Out</button>
             </div>
         </div>
 
@@ -102,7 +102,7 @@
                 <div class="divider"></div>
                 <div class="newproducts">
                     <div class="newproduct1">
-                        <img src="images/amy.png" alt="">
+                        <img onclick="toProductPage()" src="images/amy.png" alt="">
                         <div class="productinfo">
                             <div class="pname">AMY WINEHOUSE FRANK</div>
                             <div class="pcost">$15</div>
@@ -110,7 +110,7 @@
                     </div>
 
                     <div class="newproduct1">
-                        <img src="images/defense.png" alt="">
+                        <img onclick="toProductPage()" src="images/defense.png" alt="">
                         <div class="productinfo">
                             <div class="pname">IN MY DEFENSE THAT WAS A LIE</div>
                             <div class="pcost">$20</div>
