--- a/productlist.html
+++ b/productlist.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li>
                         <span class="navioptions">
-                            <img  class="sideicon" src="images/home.png" alt="">
+                            <img  class="sideicon" onclick="toHome()" src="images/home.png" alt="">
                             <a href="index.html">Home</a>
                         </span>
                     </li>
@@ -80,10 +80,8 @@
                         <span class="price">$25</span>
                     </span>
 
-
                 </div>
-
-                <button class="checkoutbtn">Check Out</button>
+                <button onclick="toCart()" class="checkoutbtn">Check Out</button>
             </div>
         </div>
 
