--- a/cart.html
+++ b/cart.html
@@ -90,7 +90,7 @@
             <div class="cart_confirm">
                 <div class="total_cost">Total: $45</div>
                 <div>
-                    <button class="checkoutbtn">Check Out</button>
+                    <button onclick="checkOut()" class="checkoutbtn">Check Out</button>
                 </div>
             </div>
         </div>
@@ -98,5 +98,6 @@
     </main>
 
 </body>
+<script src="main.js"></script>
 
 </html>
