--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <a class="icon" href="index.html">OzMusic</a>
         <span class="searchbox">
             <input type="text": placeholder="Search">
-            <span class="searchicon"><img src="images/search.png" alt=""></span>
+            <span class="searchicon">
+                <img src="images/search.png" onclick="toProductPage()" alt="">
+            </span>
         </span>
         <a class="headbtn" href="login">Login</a>
         <a class="headbtn" href="register">Register</a>
