--- a/cart.html
+++ b/cart.html
@@ -35,7 +35,7 @@
             </thead>
 
             <tbody>
-                <tr>
+                <tr id="amy">
                     <td class="cart_product">
                         <img src="images/amy.png" alt="">
                         <div class="product_info">
@@ -53,12 +53,12 @@
                     <td class="product_total">$15</td>
                     <td class="product_cancel">
                         <button class="cancel">
-                            <img src="images/cancel.png" alt="">
+                            <img onclick="cancel()" src="images/cancel.png" alt="">
                         </button>
                     </td>
                 </tr>
 
-                <tr id="glad">
+                <tr>
                     <td class="cart_product">
                         <img src="images/glad.png" alt="">
                         <div class="product_info">
@@ -78,7 +78,7 @@
 
                     <td class="product_cancel">
                         <button class="cancel">
-                            <img onclick="cancel()" src="images/cancel.png" alt="">
+                            <img  src="images/cancel.png" alt="">
                         </button>
                     </td>
                 </tr>
